--- a/Doctor/YsList.xaml
+++ b/Doctor/YsList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="600" Width="350">
+        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"  MouseLeftButtonDown="Window_MouseLeftButtonDown"  BorderThickness="0"  Height="600" Width="350">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -13,8 +13,8 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="267">全科医生机器人辅助诊断系统</Label>
-            <Button   Template="{StaticResource MaxBtn}" Margin="10,0,0,0" />
-            <Button   Template="{StaticResource MinBtn}" Margin="5,0,0,0" />
+           
+            <Button   Template="{StaticResource MinBtn}" Margin="35,0,0,0" />
             <Button   Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White">
@@ -58,7 +58,7 @@
                                     <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
                                     <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
                                     <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
+                                    <Label Height="40" Width="55" Margin="85,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
                                     <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
                                 </StackPanel>
                             </StackPanel>
