--- a/Doctor/YsList.xaml
+++ b/Doctor/YsList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"  MouseLeftButtonDown="Window_MouseLeftButtonDown"  BorderThickness="0"  Height="600" Width="350">
+        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize" Loaded="Window_Loaded"  MouseLeftButtonDown="Window_MouseLeftButtonDown"  BorderThickness="0"  Height="600" Width="350">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -26,7 +26,7 @@
                    
                 </Grid.RowDefinitions>
                 <StackPanel Grid.Row="0">
-                    <Label Height="40"  Width="300" Background="White" Foreground="#3484F5"  FontSize="18" FontWeight="Bold"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center">「 张三三   男   36岁 」</Label>
+                    <Label x:Name="MainLabel" Height="40"  Width="300" Background="White" Foreground="#3484F5"  FontSize="18" FontWeight="Bold"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center">「 张三三   男   36岁 」</Label>
                 </StackPanel>
                 <StackPanel Grid.Row="1" VerticalAlignment="Center">
                     <Grid>
@@ -50,74 +50,40 @@
                         </StackPanel>
 
                         <StackPanel Grid.Row="2" Orientation="Vertical" >
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8">
+                            <ListBox x:Name="YsListDb"      HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="350" Height="400"  >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="85,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="320"  />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
+                                <ListBox.ItemTemplate >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
+                                            <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
+                                            <StackPanel Height="40" Orientation="Horizontal">
+                                                <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
+                                                <Image Width="20"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
+                                                <Label Height="40" Width="55" Margin="35,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
+                                                <Label Height="40"  Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding diseaseMatching}"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </DataTemplate>
 
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                </ListBox.ItemTemplate>
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
-
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-
+                            </ListBox>
+                        
 
                         </StackPanel>
                         <StackPanel Grid.Row="3" Orientation="Horizontal">
                             <Image HorizontalAlignment="Center" VerticalAlignment="Center" Width="20" Height="20" Source="/Doctor;component/Resources/记录 .png"></Image>
-                            <Label Height="40" Width="120"  FontSize="13" Foreground="Black"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="共计：18"/>
-                            <Button Background="White" BorderBrush="White"  FontWeight="Bold" Foreground="#009EFF" HorizontalContentAlignment="Right" Width="150">查看更多>></Button>
+                            <Label x:Name="MainCount" Height="40" Width="120"  FontSize="13" Foreground="Black"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="共计：0"/>
+                            <Button Margin="10,0,0,0" Background="White" BorderBrush="White"  FontWeight="Bold" Foreground="#009EFF" Click="Button_Click" HorizontalContentAlignment="Right" Width="200">查看更多>></Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
