--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="700" Width="1000">
+        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize" Loaded="Window_Loaded" MouseLeftButtonDown="Window_MouseLeftButtonDown"   BorderThickness="0"  Height="700" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -14,8 +14,8 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">全科医生机器人辅助诊断系统</Label>
             <Button   Template="{StaticResource MaxBtn}" Margin="510,0,0,0" />
-            <Button   Template="{StaticResource MinBtn}" Margin="5,0,0,0" />
-            <Button   Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
+            <Button  Click="MinBtn_Click"  Template="{StaticResource MinBtn}" Margin="5,0,0,0" />
+            <Button  Click="CloseBtn_Click"  Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="#e6e6e6">
             <Grid>
@@ -47,72 +47,40 @@
                         </StackPanel>
 
                         <StackPanel Grid.Row="2" Orientation="Vertical" >
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8">
+                            <ListBox x:Name="YsListDb"      HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="285" Height="520"  >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" Width="280"  />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
+                                <ListBox.ItemTemplate >
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
+                                            <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
+                                            <StackPanel Height="40" Orientation="Horizontal">
+                                                <Label Height="40" Width="90" Margin="5,0,0,0" FontSize="12"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding disease}"/>
+                                                <Image Width="20"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
+                                                <Image Width="20"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
+                                                <Label Height="40" Width="55" Margin="15,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
+                                                <Label Height="40"  Width="50"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding diseaseMatching}"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </DataTemplate>
 
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                                </ListBox.ItemTemplate>
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical" Background="#F8F8F8" Margin="0,10,0,0">
+                            </ListBox>
 
-                                <Label Height="23" Width="60" Background=" #009EFF"  FontSize="9.5" Foreground="White"   HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Center" Content="自定义"/>
-                                <StackPanel Height="40" Orientation="Horizontal">
-                                    <Label Height="40" Width="100" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="慢性肠胃炎"/>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/急.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/危.png"></Image>
-                                    <Image Width="20" Height="25" Source="/Doctor;component/Resources/重.png"></Image>
-                                    <Label Height="40" Width="55" Margin="5,0,0,0" FontSize="13"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="置信度："/>
-                                    <Label Height="40" Width="60"  FontSize="13" Foreground="#009EFF"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="85%"/>
-                                </StackPanel>
-                            </StackPanel>
+
 
 
                         </StackPanel>
                         <StackPanel Grid.Row="3" Orientation="Horizontal" Background="#F4F4F4">
-                            <Button x:Name="btnSave" Margin="80,0,0,0"  Style="{StaticResource DefaultButton}"  Background="White"  Height="35">
+                            <Button x:Name="btnSave" Margin="80,0,0,0"  Click="BtnSave_Click" Style="{StaticResource DefaultButton}"  Background="White"  Height="35">
                                 <Button.Content>
                                     <DockPanel>
                                         <Image Source="/Doctor;component/Resources/添加疾病.png" Width="16" ></Image>
@@ -147,19 +115,28 @@
                         </StackPanel>
                         <StackPanel Grid.Row="2" Orientation="Horizontal"  Background="White" >
 
-                            <Border CornerRadius="5"  Height="30" Width="80" Margin="5,0,0,0"  BorderThickness="3" BorderBrush="#F4F4F4">
-                                <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
 
-                            </Border>
-                            <Border CornerRadius="5"  Height="30" Width="80" Margin="10,0,0,0"  BorderThickness="3" BorderBrush="#F4F4F4">
-                                <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
+                            <ListBox x:Name="painetDb"  MaxWidth="275"    HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="280" Height="250"  >
 
-                            </Border>
+                                <ListBox.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Horizontal" IsItemsHost="True" Width="270"  />
+                                    </ItemsPanelTemplate>
+                                </ListBox.ItemsPanel>
+                                <ListBox.ItemTemplate >
 
-                            <Border CornerRadius="5"  Height="30" Width="80"  Margin="10,0,0,0"  BorderThickness="3" BorderBrush="#F4F4F4">
-                                <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
+                                    <DataTemplate>
+                                        <Border CornerRadius="5"  Height="30" Width="70" Margin="3,0,0,0"  BorderThickness="3" BorderBrush="#F4F4F4">
+                                            <Label FontSize="12" Width="70" VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" Content="{Binding Name}" ></Label>
+                                        </Border>
+                                    </DataTemplate>
 
-                            </Border>
+                                </ListBox.ItemTemplate>
+
+                            </ListBox>
+
+                            
+                          
 
 
                         </StackPanel>
@@ -176,7 +153,7 @@
                                 </StackPanel>
                                 <Rectangle  HorizontalAlignment="Stretch"  Width="270" VerticalAlignment="Center" Fill="#e6e6e6" Height="1"/>
                                 <StackPanel >
-                                    <Label MaxWidth="270" FontSize="13" Padding="10,0,0,0">
+                                    <Label MaxWidth="268" FontSize="13" Padding="10,0,0,0">
                                         <TextBlock TextWrapping="Wrap"
     Text="在此输入要换行的文字，前提是它足够长，并且Label的MaxWidth不足以让它一行显示。" />
                                     </Label>
