--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -5,17 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="700" Width="1000">
-    <Grid>
+        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="700" Width="1000" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+    
+    <Grid>        
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">全科医生机器人辅助诊断系统</Label>
-            <Button   Template="{StaticResource MaxBtn}" Margin="510,0,0,0" />
-            <Button   Template="{StaticResource MinBtn}" Margin="5,0,0,0" />
-            <Button   Template="{StaticResource CloseBtn}" Margin="5,0,0,0" />
+            <Button Template="{StaticResource MaxBtn}" Margin="510,0,0,0" x:Name="MaxBtn"/>
+            <Button Template="{StaticResource MinBtn}" Margin="5,0,0,0" x:Name="MinBtn" Click="MinBtn_Click"/>
+            <Button Template="{StaticResource CloseBtn}" Margin="5,0,0,0" x:Name="CloseBtn" Click="CloseBtn_Click"/>
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="#e6e6e6">
             <Grid>
@@ -44,20 +45,72 @@
                                 <StackPanel Grid.Row="0" Orientation="Vertical"  >
                                     <StackPanel Orientation="Horizontal">
                                         <Label Height="40" Width="400" FontSize="14"  FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">主诉症状</Label>
-                                        <local:SearchText Height="25" Width="300" ></local:SearchText>
+                                        <local:SearchText Height="25" Width="300" x:Name="searchText"></local:SearchText>
                                     </StackPanel>
                                     <Rectangle  HorizontalAlignment="Stretch"  Width="700" VerticalAlignment="Center" Fill="#000000" Height="1"/>
 
                                 </StackPanel>
                                 <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                    <StackPanel Orientation="Horizontal">
+                                    <ItemsControl x:Name="symptomListBox"  Width="700">
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <WrapPanel Orientation="Horizontal" IsItemsHost="True" Height="auto" Width="670"/>
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal" Margin="6,4,6,4">
+                                                    <Border CornerRadius="5" Height="30" Width="auto" BorderThickness="3" BorderBrush="#F4F4F4">
+                                                        <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" HorizontalAlignment="Left" Width="auto" Content="{Binding .}"></Label>
+                                                    </Border>
+                                                    <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" Click="DeleteSymptomButton_Click" Tag="{Binding .,Mode=OneWay}"/>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                    <!--<ListBox Width="700" x:Name="symptomListBox3" BorderThickness="0" Visibility="Hidden">
+                                        <ListBox.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <WrapPanel Orientation="Horizontal" IsItemsHost="True" Height="auto" Width="670"/>
+                                            </ItemsPanelTemplate>
+                                        </ListBox.ItemsPanel>
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <ListBoxItem Style="{StaticResource UserItemContainerStyle}">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Border CornerRadius="5" Height="30" Width="auto" BorderThickness="3" BorderBrush="#F4F4F4">
+                                                            <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" HorizontalAlignment="Left" Width="auto" Content="{Binding .}"></Label>
+                                                        </Border>
+                                                        <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" Click="DeleteSymptomButton_Click" Tag="{Binding .,Mode=OneWay}"/>
+                                                    </StackPanel>
+
+                                                </ListBoxItem>
+                                                
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>                                       
+                                    </ListBox>-->
+
+
+
+
+                                    <!--<ItemsControl x:Name="UserList" ItemTemplate="{StaticResource UserDataTemplate}" >
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <VirtualizingStackPanel Orientation="Horizontal"/>
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                    </ItemsControl>-->
+
+
+
+                                    <!--<StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                                         <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
                                             <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
 
                                         </Border>
-                                       
                                         <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
                                     </StackPanel>
+
                                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                                         <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
                                             <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
@@ -96,15 +149,7 @@
 
                                         </Border>
                                         <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
-                                    </StackPanel>
-
-                                    <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                                        <Border CornerRadius="5"  Height="30" Width="80"   BorderThickness="3" BorderBrush="#F4F4F4">
-                                            <Label VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"  Background="#F4F4F4" >关闭</Label>
-
-                                        </Border>
-                                        <Button Background="#3484F5"  Template="{StaticResource BlueClose}" Margin="-10,-20,0,0" />
-                                    </StackPanel>
+                                    </StackPanel>-->
 
                                     
                                     <!--<ListBox     HorizontalContentAlignment="Center" BorderThickness="0" HorizontalAlignment="Center" Width="700"   >
@@ -148,17 +193,37 @@
 
                                 </StackPanel>
                                 <StackPanel Grid.Row="1" Orientation="Vertical">
-                                    <StackPanel Orientation="Horizontal" Margin="0,15,0,0">
-                                        <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" >关闭</Button>
-                                        <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
-                                        <Button  Style="{StaticResource GreenButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
+                                    
+                                    
+                                    <ItemsControl Height="225" Width="700" x:Name="symptomResultListBox" BorderThickness="0">
+                                        <ItemsControl.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <WrapPanel Orientation="Horizontal" IsItemsHost="True" Height="auto" Width="670"/>
+                                            </ItemsPanelTemplate>
+                                        </ItemsControl.ItemsPanel>
+                                        <ItemsControl.ItemTemplate >
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal" Margin="8,8,2,2">
+
+                                                    <!--<CheckBox Style="{StaticResource EmptyCheckBox}" Content="{Binding symptom}" Width="auto" Click="SymptomCheckBox_Click"></CheckBox>-->
+                                                    <Button Style="{StaticResource WhiteButton}" Height="30" Width="auto"  Content="{Binding symptom}" Click="SymptomResultButton_Click" Tag="false"></Button>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+
+                                    </ItemsControl>
+                                    
+
+
+                                    <!--<StackPanel Orientation="Horizontal" Margin="0,15,0,0">
+                                        <Button  Style="{StaticResource WhiteButton}" Height="30" Width="auto" Padding="10,10" >关闭</Button>
                                         <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         <Button  Style="{StaticResource GreenButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="0,15,0,0">
+                                    </StackPanel>-->
+                                    <!--<StackPanel Orientation="Horizontal" Margin="0,15,0,0">
                                         <Button  Style="{StaticResource GreenButton}" Height="30" Width="80" >关闭</Button>
                                         <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         <Button  Style="{StaticResource GreenButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
@@ -167,7 +232,7 @@
                                         <Button  Style="{StaticResource GreenButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
                                         <Button  Style="{StaticResource WhiteButton}" Height="30" Width="80" Margin="10,0,0,0" >关闭</Button>
 
-                                    </StackPanel>
+                                    </StackPanel>-->
 
 
 
@@ -215,36 +280,37 @@
                                 <StackPanel Grid.Row="1" Orientation="Vertical">
                                     <StackPanel Orientation="Horizontal" Margin="0,15,0,0">
                                         <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        
+                                        <TextBox  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Text="{Binding temperature}"/>
                                         <Label Height="40" Width="35" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(℃)</Label>
 
-                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >脉搏：</Label>
+                                        <TextBox  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Text="{Binding pulse}" />
                                         <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(次/分)</Label>
 
-                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >呼吸：</Label>
+                                        <TextBox  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Text="{Binding respiratoryRate}" />
                                         <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(次/分)</Label>
 
-                                        <Label Height="40" Width="60" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="60" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >血氧：</Label>
+                                        <TextBox  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Text="{Binding bloodOxygen}" />
                                         <Label Height="40" Width="35" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(%)</Label>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="0,15,0,0">
-                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox Width="60"  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >血糖：</Label>
+                                        <TextBox Width="60"  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  Text="{Binding bloodGlucose}" />
                                         <Label Height="40" Width="70" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(mmol/L)</Label>
 
-                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Width="60" Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="50" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >血压：</Label>
+                                        <TextBox  Width="60" Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  Text="{Binding diastolicPressure}" />
                                         <Label Height="40" Width="30" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Center" >--</Label>
 
 
-                                        <TextBox  Width="60" Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <TextBox  Width="60" Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Text="{Binding systolicPressure}" />
                                         <Label Height="40" Width="90" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(mmHG(Kpa))</Label>
 
-                                        <Label Height="40" Width="56" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >体  温：</Label>
-                                        <TextBox  Style="{StaticResource txtTest}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"    />
+                                        <Label Height="40" Width="56" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >平均压：</Label>
+                                        <TextBox  Style="{StaticResource newText}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  Text="{Binding meanPressure}" />
                                         <Label Height="40" Width="90" FontSize="13"   VerticalContentAlignment="Center"  HorizontalContentAlignment="Right" >(mmHG(Kpa))</Label>
                                     </StackPanel>
                                 </StackPanel>
